--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@ https://templatemo.com/tm-603-nexaverse
 
         <!-- Footer -->
         <footer class="footer" id="mainFooter">
-            <p>© 2026 NexaVerse. Crafted with passion. Design by <a href="https://mh-lab.vercel.app/" target="_blank">mhShahrukh</a></p>
+            <p>© 2026 NexaVerse. Crafted with passion. Design by <a href="https://mh-lab.vercel.app/" target="_blank">MH_Shahrukh</a></p>
         </footer>
     </div>
 <script src="templatemo-nexa-scripts.js"></script>
